package eapli.elearning.exammanagement.domain;

/**
 * @author : Ricardo Venâncio - 1210828
 **/
public enum ExamType {
    NORMAL,
    FORMATIVE
}
